<resources>
    <string name="app_name">Touch&amp;Lock</string>
    <string name="strRegister">Regıster</string>
    <string name="strLogin">Logın</string>
    <string name="strAdvertisement">Gıve Advertısement</string>
    <string name="strSearch">Search</string>
    <string name="strCity">City</string>
    <string name="strGuestNum">Number of Guest</string>
    <string name="checkInDateString">Check-In Date</string>
    <string name="checkOutDateString">Check-Out Date</string>
    <string name="txtMail_hint">Enter Email Address</string>
    <string name="txtPassword_hint">Enter Password</string>
    <string name="name_hint">Enter Your Full Name</string>
    <string name="search_page_title"></string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="propertyTyple">Type</string>

    <string-array name="city_array">
        <item>Antalya</item>
        <item>Adana</item>
        <item>Ankara</item>
        <item>İstanbul</item>
        <item>İzmir</item>
        <item>Eskişehir</item>
    </string-array>

    <string-array name="numGuest_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="property_array">
        <item>Entire Home</item>
        <item>Private Room</item>
        <item>Shared Room</item>
    </string-array>

</resources>
